# bcp-code-planogram

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  POST.md  README.md  SECURITY.md  bench.py  cli.py  pyproject.toml  requirements-treesitter.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bcp/: __init__.py  __main__.py  cli.py  planogram.py  signature_indexer.py  tokens.py
examples/: quickstart.py
tests/: test_cli.py  test_indexer.py  test_planogram.py
